# LifeSim

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Dockerfile  LifeSim.cpp  Meep.cpp  README.md  WorldManager.h  main.cpp  main.mm  setup.bat  setup.sh  vcpkg-configuration.json  vcpkg.json
cmake/: dependencies.cmake  macros.cmake
headers/: Meep.h
source/: Application.cpp  Application.h  CollisionSystem.cpp  CollisionSystem.h  Common.h  ECSManager.cpp  ECSManager.h  InputManager.cpp  InputManager.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  WorldManager.cpp  WorldManager.h  common.h
utils/: Common.h  Instrumentation.h  Random.h  ServiceContainer.h
